--- a/officers.html
+++ b/officers.html
@@ -110,13 +110,8 @@ function FP_getObjectByID(id,o) {//v1.0
 		<img id="img6" alt="HOW TO JOIN" height="30" onmousedown="FP_swapImg(1,0,/*id*/'img6',/*url*/'button39.gif')" onmouseout="FP_swapImg(0,0,/*id*/'img6',/*url*/'button37.gif')" onmouseover="FP_swapImg(1,0,/*id*/'img6',/*url*/'button38.gif')" onmouseup="FP_swapImg(0,0,/*id*/'img6',/*url*/'button38.gif')" src="button37.gif" style="border: 0" width="150" /><!-- MSComment="ibutton" fp-style="fp-btn: Glass Capsule 4; fp-font: Arial, Helvetica, sans-serif; fp-font-size: 12; fp-transparent: 1" fp-title="HOW TO JOIN" --></a><br />
 		<a href="license.html">
 		<img id="img7" alt="GETTING LICENSED" height="30" onmousedown="FP_swapImg(1,0,/*id*/'img7',/*url*/'button3C.gif')" onmouseout="FP_swapImg(0,0,/*id*/'img7',/*url*/'button3A.gif')" onmouseover="FP_swapImg(1,0,/*id*/'img7',/*url*/'button3B.gif')" onmouseup="FP_swapImg(0,0,/*id*/'img7',/*url*/'button3B.gif')" src="button3A.gif" style="border: 0" width="150" /><!-- MSComment="ibutton" fp-style="fp-btn: Glass Capsule 4; fp-font: Arial, Helvetica, sans-serif; fp-transparent: 1" fp-title="GETTING LICENSED" --></a><br />
-
-		<!-- <a href="bulletin_board.html"> -->
-		<a href="https://www.k2pca.org/phpBB3/">
-		<img id="img9" alt="BULLETIN BOARD" height="30" onmousedown="FP_swapImg(1,0,/*id*/'img9',/*url*/'button8.gif')" onmouseout="FP_swapImg(0,0,/*id*/'img9',/*url*/'button6.gif')" onmouseover="FP_swapImg(1,0,/*id*/'img9',/*url*/'button7.gif')" onmouseup="FP_swapImg(0,0,/*id*/'img9',/*url*/'button7.gif')" src="button6.gif" style="border: 0" width="150" /><!-- MSComment="ibutton" fp-style="fp-btn: Glass Capsule 4; fp-font: Arial, Helvetica, sans-serif; fp-font-size: 11; fp-transparent: 1" fp-title="BULLETIN BOARD" -->
-		</a><br />
-
-
+		<a href="bulletin_board.html">
+		<img id="img9" alt="BULLETIN BOARD" height="30" onmousedown="FP_swapImg(1,0,/*id*/'img9',/*url*/'button8.gif')" onmouseout="FP_swapImg(0,0,/*id*/'img9',/*url*/'button6.gif')" onmouseover="FP_swapImg(1,0,/*id*/'img9',/*url*/'button7.gif')" onmouseup="FP_swapImg(0,0,/*id*/'img9',/*url*/'button7.gif')" src="button6.gif" style="border: 0" width="150" /><!-- MSComment="ibutton" fp-style="fp-btn: Glass Capsule 4; fp-font: Arial, Helvetica, sans-serif; fp-font-size: 11; fp-transparent: 1" fp-title="BULLETIN BOARD" --></a><br />
 		<a href="links.html">
 		<img id="img8" alt="LINKS" height="30" onmousedown="FP_swapImg(1,0,/*id*/'img8',/*url*/'button42.gif')" onmouseout="FP_swapImg(0,0,/*id*/'img8',/*url*/'button40.gif')" onmouseover="FP_swapImg(1,0,/*id*/'img8',/*url*/'button41.gif')" onmouseup="FP_swapImg(0,0,/*id*/'img8',/*url*/'button41.gif')" src="button40.gif" style="border: 0" width="150" /><!-- MSComment="ibutton" fp-style="fp-btn: Glass Capsule 4; fp-font: Arial, Helvetica, sans-serif; fp-font-size: 12; fp-transparent: 1" fp-title="LINKS" --></a><br />
 		<br />
@@ -186,7 +181,7 @@ function FP_getObjectByID(id,o) {//v1.0
 						<td class="auto-style7" style="width: 400px"><strong>
 						Eastern Coordinator</strong></td>
 						<td class="auto-style7" style="width: 400px"><strong>
-						Harold Cheetham - K2HJC</strong></td>
+						Harold Cheetham - W2HJC</strong></td>
 					</tr>
 					<tr>
 						<td class="auto-style7" style="width: 400px"><strong>
@@ -206,14 +201,6 @@ function FP_getObjectByID(id,o) {//v1.0
 						<td class="auto-style7" style="width: 400px"><strong>
 						Randy Hanson - N7WUZ</strong></td>
 					</tr>
-
-					<tr>
-                                                <td class="auto-style7" style="width: 400px"><strong>
-                                                Japan Coordinator</strong></td>
-                                                <td class="auto-style7" style="width: 400px"><strong>
-                                                Marvin Motsenbocker - AK4VO</strong></td>
-                                        </tr>
-
 					<tr>
 						<td class="auto-style7" style="width: 400px"><strong>
 						Executive Committee Member</strong></td>
@@ -243,7 +230,6 @@ function FP_getObjectByID(id,o) {//v1.0
 						<td class="auto-style7" style="width: 400px"><strong>
 						Mark Khusid - AC2LH</strong></td>
 					</tr>
-
 				</table>
 				<br />
 				</td>
