--- a/pcaranews.html
+++ b/pcaranews.html
@@ -104,12 +104,8 @@ function FP_getObjectByID(id,o) {//v1.0
 		<img id="img6" alt="HOW TO JOIN" height="30" onmousedown="FP_swapImg(1,0,/*id*/'img6',/*url*/'button39.gif')" onmouseout="FP_swapImg(0,0,/*id*/'img6',/*url*/'button37.gif')" onmouseover="FP_swapImg(1,0,/*id*/'img6',/*url*/'button38.gif')" onmouseup="FP_swapImg(0,0,/*id*/'img6',/*url*/'button38.gif')" src="button37.gif" style="border: 0" width="150" /><!-- MSComment="ibutton" fp-style="fp-btn: Glass Capsule 4; fp-font: Arial, Helvetica, sans-serif; fp-font-size: 12; fp-transparent: 1" fp-title="HOW TO JOIN" --></a><br />
 		<a href="license.html">
 		<img id="img7" alt="GETTING LICENSED" height="30" onmousedown="FP_swapImg(1,0,/*id*/'img7',/*url*/'button3C.gif')" onmouseout="FP_swapImg(0,0,/*id*/'img7',/*url*/'button3A.gif')" onmouseover="FP_swapImg(1,0,/*id*/'img7',/*url*/'button3B.gif')" onmouseup="FP_swapImg(0,0,/*id*/'img7',/*url*/'button3B.gif')" src="button3A.gif" style="border: 0" width="150" /><!-- MSComment="ibutton" fp-style="fp-btn: Glass Capsule 4; fp-font: Arial, Helvetica, sans-serif; fp-transparent: 1" fp-title="GETTING LICENSED" --></a><br />
-
-		<!-- <a href="bulletin_board.html"> -->
-		<a href="https://www.k2pca.org/phpBB3/">
-		<img id="img9" alt="BULLETIN BOARD" height="30" onmousedown="FP_swapImg(1,0,/*id*/'img9',/*url*/'button8.gif')" onmouseout="FP_swapImg(0,0,/*id*/'img9',/*url*/'button6.gif')" onmouseover="FP_swapImg(1,0,/*id*/'img9',/*url*/'button7.gif')" onmouseup="FP_swapImg(0,0,/*id*/'img9',/*url*/'button7.gif')" src="button6.gif" style="border: 0" width="150" /><!-- MSComment="ibutton" fp-style="fp-btn: Glass Capsule 4; fp-font: Arial, Helvetica, sans-serif; fp-font-size: 11; fp-transparent: 1" fp-title="BULLETIN BOARD" -->
-		</a><br />
-
+		<a href="bulletin_board.html">
+		<img id="img9" alt="BULLETIN BOARD" height="30" onmousedown="FP_swapImg(1,0,/*id*/'img9',/*url*/'button8.gif')" onmouseout="FP_swapImg(0,0,/*id*/'img9',/*url*/'button6.gif')" onmouseover="FP_swapImg(1,0,/*id*/'img9',/*url*/'button7.gif')" onmouseup="FP_swapImg(0,0,/*id*/'img9',/*url*/'button7.gif')" src="button6.gif" style="border: 0" width="150" /><!-- MSComment="ibutton" fp-style="fp-btn: Glass Capsule 4; fp-font: Arial, Helvetica, sans-serif; fp-font-size: 11; fp-transparent: 1" fp-title="BULLETIN BOARD" --></a><br />
 		<a href="links.html">
 		<img id="img8" alt="LINKS" height="30" onmousedown="FP_swapImg(1,0,/*id*/'img8',/*url*/'button42.gif')" onmouseout="FP_swapImg(0,0,/*id*/'img8',/*url*/'button40.gif')" onmouseover="FP_swapImg(1,0,/*id*/'img8',/*url*/'button41.gif')" onmouseup="FP_swapImg(0,0,/*id*/'img8',/*url*/'button41.gif')" src="button40.gif" style="border: 0" width="150" /><!-- MSComment="ibutton" fp-style="fp-btn: Glass Capsule 4; fp-font: Arial, Helvetica, sans-serif; fp-font-size: 12; fp-transparent: 1" fp-title="LINKS" --></a><br />
 		<br />
@@ -125,6 +121,19 @@ function FP_getObjectByID(id,o) {//v1.0
 				<td class="auto-style6"><span class="auto-style11">
 				<strong style="color: rgb(0, 0, 0); font-family: Arial, Helvetica, sans-serif; font-style: normal; font-variant-ligatures: normal; font-variant-caps: normal; letter-spacing: normal; orphans: 2; text-align: center; text-indent: 0px; text-transform: none; white-space: normal; widows: 2; word-spacing: 0px; -webkit-text-stroke-width: 0px; text-decoration-style: initial; text-decoration-color: initial;">
 				<span class="auto-style7"><br />
+				January 22nd 2019</span>: We have replaced our Net Calendar with 
+				a<span class="auto-style7"> </span>Google calendar which is 
+				easier to not only read but can also set up reminders for folks 
+				for the nets you wish to partake in.<span class="auto-style7">
+				</span>We have also incorporated a new security feature for our 
+				Bulletin Board, as we have seen an increase in "robot" users.<span class="auto-style7"><br />
+				<br />
+				November 29th 2018</span>: We have incorporated an interactive 
+				Fourum/Bulletn board to our page, allowing users to register and 
+				partake is several interactive topics. The board requires users 
+				to register but will offer full access to the forums as well as 
+				private messaging.<span class="auto-style7"><br />
+				<br />
 				October 30th 2018</span></strong></span><strong style="color: rgb(0, 0, 0); font-family: Arial, Helvetica, sans-serif; font-size: medium; font-style: normal; font-variant-ligatures: normal; font-variant-caps: normal; letter-spacing: normal; orphans: 2; text-align: center; text-indent: 0px; text-transform: none; white-space: normal; widows: 2; word-spacing: 0px; -webkit-text-stroke-width: 0px; text-decoration-style: initial; text-decoration-color: initial;">: 
 				We have started the process of creating our club website.&nbsp; 
 				We have secured the domain K2PCA.ORG, a host server, and are 
