fixed floating dashes on all pages MK

--- a/officers.html
+++ b/officers.html
@@ -203,6 +203,13 @@ function FP_getObjectByID(id,o) {//v1.0
 					</tr>
 					<tr>
 						<td class="auto-style7" style="width: 400px"><strong>
+						Japan Coordinator</strong></td>
+						<td class="auto-style7" style="width: 400px"><strong>
+						Marvin Motsenbocker - AK4VO</strong></td>
+					</tr>
+					
+					<tr>
+						<td class="auto-style7" style="width: 400px"><strong>
 						Executive Committee Member</strong></td>
 						<td class="auto-style7" style="width: 400px"><strong>Gil 
 						Magee - W5GIL</strong></td>
