--- a/pcaranews.html
+++ b/pcaranews.html
@@ -120,15 +120,16 @@ function FP_getObjectByID(id,o) {//v1.0
 			<tr>
 				<td class="auto-style6"><span class="auto-style11">
 				<strong style="color: rgb(0, 0, 0); font-family: Arial, Helvetica, sans-serif; font-style: normal; font-variant-ligatures: normal; font-variant-caps: normal; letter-spacing: normal; orphans: 2; text-align: center; text-indent: 0px; text-transform: none; white-space: normal; widows: 2; word-spacing: 0px; -webkit-text-stroke-width: 0px; text-decoration-style: initial; text-decoration-color: initial;">
-				<span class="auto-style7"><br />
-				January 22nd 2019</span>: We have replaced our Net Calendar with 
-				a<span class="auto-style7"> </span>Google calendar which is 
-				easier to not only read but can also set up reminders for folks 
-				for the nets you wish to partake in.<span class="auto-style7">
-				</span>We have also incorporated a new security feature for our 
-				Bulletin Board, as we have seen an increase in "robot" users.<span class="auto-style7"><br />
 				<br />
-				November 29th 2018</span>: We have incorporated an interactive 
+				<span class="auto-style7">
+				January 22nd 2019</span>: We have replaced our Net Calendar with 
+				a Google calendar which is 
+				easier to not only read but can also set up reminders for folks 
+				for the nets you wish to partake in.
+				We have also incorporated a new security feature for our 
+				Bulletin Board, as we have seen an increase in "robot" users.<br />
+				<br />
+				<span class="auto-style7">November 29th 2018</span>: We have incorporated an interactive 
 				Fourum/Bulletn board to our page, allowing users to register and 
 				partake is several interactive topics. The board requires users 
 				to register but will offer full access to the forums as well as 
