--- a/pcaranews.html
+++ b/pcaranews.html
@@ -122,6 +122,9 @@ function FP_getObjectByID(id,o) {//v1.0
 				<strong style="color: rgb(0, 0, 0); font-family: Arial, Helvetica, sans-serif; font-style: normal; font-variant-ligatures: normal; font-variant-caps: normal; letter-spacing: normal; orphans: 2; text-align: center; text-indent: 0px; text-transform: none; white-space: normal; widows: 2; word-spacing: 0px; -webkit-text-stroke-width: 0px; text-decoration-style: initial; text-decoration-color: initial;">
 				<br />
 				<span class="auto-style7">
+				February 1nd 2020</span>: We have been having regular nets on Echolink at K2RMF-R!  Please see the Net Calendar for more information.<br />
+				<br />
+				<span class="auto-style7">
 				January 22nd 2019</span>: We have replaced our Net Calendar with 
 				a Google calendar which is 
 				easier to not only read but can also set up reminders for folks 
